# publicite_francais

./: .coverage  .dockerignore  .env.cloud.docker.template  .env.example  .gitignore  DATABASE_SETUP.md  Dockerfile  Dockerfile.scraper  IMPROVEMENTS.md  LOGGING_EXAMPLES.md  Makefile  Makefile.backup  README.md  SYSTEM_DOCUMENTATION.md  database_main.py  demo_cli.py  docker-compose.yml  minimal_dbt_models.sql  mypy.ini  output.csv  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run_tests.py  test_article.html  test_database_connection.py
.dbt/: profiles.yml
.github/workflows/: build-image.yml  ci-test.yml  ci.yml
article_scrapers/: main.py
article_scrapers/parsers/: base_parser.py  slate_fr_parser.py
article_scrapers/scrapers/: slate_fr_scraper.py
article_scrapers/test_data/: regle-baillon-mondial-trump-entraver-acces-avortement-mexico-city-policy-anti-ivg-dangers-mort-femmes-deces-grossesse.html
article_scrapers/utils/: csv_loader.py  csv_writer.py  postgres_conn.py
database/: clear_test_data.py  init-multi-db.sql  init-test-tables.sql  init.sh  init.sql  schema.sql  test_schema.sql
database/migrations/: 000_initial.sql  001_add_trafilatura_fields.sql  001_initial_schema.sql  002_drop_url_unique_constraint.sql  003_add_word_analysis_tables.sql  003_add_word_events_table.sql  003_example_add_article_tags.sql  003_rollback_example_add_article_tags.sql  004_add_stop_words_table.sql  004_fix_word_frequency_triggers.sql  ROLLBACK_GUIDE.md  run_migrations.py
database/migrations_old/: 001_add_trafilatura_fields.sql  002_drop_url_unique_constraint.sql  003_add_word_events_table.sql  004_add_stop_words_table.sql
docker/: Dockerfile.app  Dockerfile.dbt  Dockerfile.scraper
docs/: 01-System-Process-Flow.md  02-Component-Factory-Implementation.md  03-Parser-Template-Method-Pattern.md  04-Repository-Pattern-Database-Access.md  05-DBT-Data-Transformation-Pipeline.md  06-Testing-Strategy-Implementation.md  07-CI-CD-Database-Testing-Strategy.md  08-Adding-News-Source.md  09-Troubleshooting.md  10-Makefile-Commands-Usage-Guide.md  cloud_deployment_plan.md  dataprocessingplan.md  gcp-deployment-guide.md  testing_rebuild_plan_2025-09-03.md
documentation/: 00-System-Architecture.md  01-Scrapers.md  02-Parsers.md  03-Processor.md  04-Testing.md  05-Utils.md  06-Config.md  07-Python-Concepts.md  10-CI-CD.md  11-Project-Maintenance.md  12-Glossary.md  13-Cloud-Deployment-and-Scaling.md  14-Git-Strategy-and-Conflict-Resolution.md  15-Django-Backend-Integration-Strategy.md  README.md
french_flashcards/: .user.yml  dbt_project.yml  profiles.yml
french_flashcards/config/: junk_words.json  stopwords.json
french_flashcards/models/: articles.sql  cleaned_articles.sql  raw_words.sql  sentences.sql  sources.yml  vocabulary_for_flashcards.sql  word_frequency_by_article.sql  word_frequency_overall.sql  word_occurrences.sql  words.sql
output/: 2025-03-07.csv  2025-04-01.csv  2025-06-02.csv  2025-06-03.csv
resources/: french-stop-words.txt
scripts/: check-migrations.sh  compare_word_counts.py  count_fixture_words.py  rebuild-db.sh  run-test-data.sh  run-tests.sh
scripts/sh/: apply_schema.sh  clear_tables.sh  drop_tables.sh  rebuild_db.sh
src/: __init__.py  main.py  models.py
src/article_scrapers/: main.py
src/config/: __init__.py  database_config.py  environment.py  junk_words_config.py  settings.py  site_configs.py  source_configs.py  text_processing_config.py  website_parser_scrapers_config.py
src/core/: __init__.py  class_registry.py  component_factory.py  component_loader.py  coordinator.py  data_processor.py  database.py  database_processor.py  models.py  orchestrator.py  processor.py
src/database/: __init__.py  article_repository.py  database.py  migration_runner.py  models.py  schema.py
src/parsers/: __init__.py  base_parser.py  database_base_parser.py  database_france_info_parser.py  database_ladepeche_fr_parser.py  database_slate_fr_parser.py  database_tf1_info_parser.py  france_info_parser.py  ladepeche_fr_parser.py  slate_fr_parser.py  tf1_info_parser.py
src/scrapers/: __init__.py  base_scraper.py  france_info_scraper.py  ladepeche_fr_scraper.py  slate_fr_scraper.py  tf1_info_scraper.py
src/services/: __init__.py  article_pipeline.py  word_extractor.py
src/soup_validators/: __init__.py  base_soup_validator.py  france_info_soup_validator.py  ladepeche_fr_soup_validator.py  slate_fr_soup_validator.py  tf1_info_soup_validator.py
src/test_data/: url_mapping.py
src/url_collectors/: base_url_collector.py  france_info_url_collector.py  ladepeche_fr_url_collector.py  slate_fr_url_collector.py  tf1_info_url_collector.py
src/utils/: __init__.py  cli_output.py  consolidated_output.py  csv_writer.py  database_operations.py  french_text_processor.py  html_downloader.py  lazy_imports.py  logging_config_enhanced.py  shared_output.py  structured_logger.py  terminal_output.py  url_mapping.py  validators.py
tests/: README.md  __init__.py  conftest.py  test_database_connection.py  test_deterministic_pipeline.py  test_essential.py  test_main.py  test_stage1_pipeline.py  test_stage2_database.py  test_stage3_content.py  test_stage4_mapping.py
tests/e2e/: test_e2e_word_extraction.py  test_stage1_pipeline.py  (+5 more)
web_scrapers/: logging_config.py  slate_fr_article_scraper.py  web_scraper.py
(+99 files in other folders)
