[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "publicite-francais"
version = "0.1.0"
description = "French article scraper for vocabulary learning"
readme = "README.md"
authors = [{name = "roba7o"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "requests>=2.25.1",
    "beautifulsoup4>=4.9.3",
    "lxml>=4.6.3",
    "urllib3>=1.26.5",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "python-dotenv>=1.0.0",
    "dbt-postgres==1.9.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.10.0",
    "pytest>=8.2.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false  
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_return_any = false
warn_unreachable = false
strict_equality = false
mypy_path = "src"

# Ignore common issues in learning projects
[[tool.mypy.overrides]]
module = ["config.settings", "services.*", "parsers.*"]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests",
]

